# sphinx_pyppeteer_builder

./: .gitignore  AUTHORS  CHANGES  README.rst  babel.cfg  requirements.txt  setup.cfg  setup.py
sphinx_pyppeteer_builder/: __init__.py  loghandler.py  pyppeteer_builder.py  tabs.py
sphinx_pyppeteer_builder/locale/: sphinx.pot
sphinx_pyppeteer_builder/locale/fr/LC_MESSAGES/: sphinx.po
sphinx_pyppeteer_builder/static/: print_tabs.css
