[metadata]
description-file = README.rst
license-files =
   LICENSE
   LICENSE-de
   LICENSE-fr
   LICENSE-nl


[extract_messages]
mapping_file = babel.cfg
output_file = sphinx_pyppeteer_builder/locale/sphinx.pot
keywords = _ l_ lazy_gettext gettext ngettext
add_comments = Translators:

[init_catalog]
domain = sphinx
input_file = sphinx_pyppeteer_builder/locale/sphinx.pot
output_dir = sphinx_pyppeteer_builder/locale/

[update_catalog]
domain = sphinx
input_file = sphinx_pyppeteer_builder/locale/sphinx.pot
output_dir = sphinx_pyppeteer_builder/locale/

[compile_catalog]
domain = sphinx
directory = sphinx_pyppeteer_builder/locale/
